@@ -1,5 +1,5 @@
 glade_catalog_DATA = gdaui-catalog.xml
-glade_catalogdir = $(GLADE_CATALOG)
+glade_catalogdir = $(datadir)/glade/catalogs
 
 glade_pixmap_DATA = \
 	widget-gdaui-gdauigrid.png \
@@ -9,7 +9,7 @@ glade_pixmap_DATA = \
 	widget-gdaui-gdauirawgrid.png
 
 
-glade_pixmapdir = $(GLADE_PIXMAP)
+glade_pixmapdir = $(datadir)/glade/pixmaps
 
 EXTRA_DIST = \
 	$(glade_catalog_DATA) \
