@@ -4,7 +4,9 @@ libgda 5.2.10
  - GdaParser: remove spaces and enters before next statement, fix 203
  - GdauiSet: fix gdaui_set_source_get_ref_columns() return value, fix #123
  - SqlParser: fix Vala bindings
+ - Vala: added missing variadic methods to VAPI
  - Removing Python 2 support to use Python 3 by default
+ - Glade catalog and pixmaps installation directory fixed for make distcheck
 
 libgda 5.2.9
  - Fix Sun JRE 1.8 detection
